[package]
name = "gioser-edit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "gioser-edit — editor de archivos rudimentario sobre Llimphi: file tree a la izquierda, text-editor con syntax highlight a la derecha. Pensado para probar las features del editor (selección, undo, brackets, clipboard) sobre archivos reales del workspace."

[[bin]]
name = "gioser-edit"
path = "src/main.rs"

[dependencies]
arboard = { workspace = true }
llimphi-ui = { workspace = true }
llimphi-theme = { workspace = true }
llimphi-module-command-palette = { workspace = true }
llimphi-module-fif = { workspace = true }
llimphi-module-file-picker = { workspace = true }
llimphi-module-shuma-term = { workspace = true }
llimphi-module-symbol-outline = { workspace = true }
llimphi-widget-tabs = { workspace = true }
llimphi-widget-text-editor = { workspace = true }
llimphi-widget-text-editor-lsp = { workspace = true }
llimphi-widget-text-input = { workspace = true }
llimphi-widget-tree = { workspace = true }
