[package]
name = "nada"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "nada — editor de archivos sobre Llimphi: file tree a la izquierda, text-editor con syntax highlight a la derecha."

[[bin]]
name = "nada"
path = "src/main.rs"

[dependencies]
arboard = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
llimphi-ui = { workspace = true }
llimphi-theme = { workspace = true }
llimphi-module-command-palette = { workspace = true }
llimphi-module-diff-viewer = { workspace = true }
llimphi-module-fif = { workspace = true }
llimphi-module-file-picker = { workspace = true }
llimphi-module-bookmarks = { workspace = true }
llimphi-module-mini-map = { workspace = true }
llimphi-module-shuma-term = { workspace = true }
llimphi-module-symbol-outline = { workspace = true }
llimphi-widget-tabs = { workspace = true }
llimphi-widget-text-editor = { workspace = true }
llimphi-widget-text-editor-lsp = { workspace = true }
llimphi-widget-text-input = { workspace = true }
llimphi-widget-tree = { workspace = true }
rimay-localize = { path = "../../shared/rimay-localize" }
wawa-config = { path = "../../shared/wawa-config" }
wawa-config-llimphi = { path = "../../shared/wawa-config-llimphi" }
