[package]
name = "app-bus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "app-bus — registro único de aplicaciones de gioser + protocolo de menú global (Archivo/Editar/Ayuda) + bus de eventos foco/lanzamiento. Lo consultan los launchers (mirada, shuma) en vez de reimplementar el despacho cada uno; el menú clásico de la app se declara acá para que una barra de launcher pueda adoptarlo (estilo menú global mac)."

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
