[package]
name = "tawasuyu-apps-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "tawasuyu-apps-desktop — genera e instala los .desktop + íconos SVG (freedesktop hicolor/scalable) de cada app de la suite, a partir del catálogo de app-bus y los AppIcon vectoriales de llimphi-icons. Las apps pasan a ser visibles en cualquier escritorio."

[[bin]]
name = "tawasuyu-apps-desktop"
path = "src/main.rs"

[dependencies]
app-bus = { workspace = true }
llimphi-icons = { workspace = true }
