[package]
name = "rag-motor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "La abstracción agnóstica de un motor RAG: el trait RagMotor (ask + corpus_len) y los tipos de cita (RagSource/RagAnswer/RagError), compartidos por los motores (paloma sobre el correo, willay sobre el centro de eventos) y el widget que los monta. Sin saber de embeddings, LLM ni del corpus concreto."

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
